chore: remove secrets lol

--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
 		"deploy:commands": "node --enable-source-maps dist/deploy.js",
 		"dev": "yarn build && yarn start:dev",
 		"prettier": "prettier --write .",
-		"lint": "eslint --fix --ext ts src",
-		"prepare": "husky install"
+		"lint": "eslint --fix --ext ts src"
 	},
 	"repository": "https://github.com/cobaltia/cobalt-gpt.git",
 	"author": "JuanPablo2655 <personal@isidrocasiano.com>",
