--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
 		"@sapphire/timestamp": "^1.0.0",
 		"@sapphire/utilities": "^3.11.0",
 		"@skyra/env-utilities": "^1.1.0",
-		"chatgpt": "^4.2.0",
 		"discord-api-types": "^0.37.32",
 		"discord.js": "^14.7.1",
-		"globby": "^13.1.3"
+		"globby": "^13.1.3",
+		"openai": "^3.2.1"
 	},
 	"devDependencies": {
 		"@types/node": "^18.11.18",
