--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
 		"discord-api-types": "^0.37.32",
 		"discord.js": "^14.7.1",
 		"globby": "^13.1.3",
-		"openai": "^3.2.1"
+		"openai": "^3.2.1",
+		"perspective-api-client": "^3.1.0"
 	},
 	"devDependencies": {
 		"@types/node": "^18.11.18",
