--- a/package.json
+++ b/package.json
@@ -5,22 +5,14 @@
 	"type": "module",
 	"imports": {
 		"#lib/*": "./dist/lib/*.js",
-		"#lib/typings": "./dist/lib/typings/index.js",
-		"#lib/data": "./dist/lib/data/index.js",
-		"#lib/errors": "./dist/lib/errors/index.js",
-		"#lib/database": "./dist/lib/database/index.js",
+		"#lib/types": "./dist/lib/types/index.js",
 		"#lib/structures": "./dist/lib/structures/index.js",
-		"#lib/structures/commands": "./dist/lib/structures/commands/index.js",
 		"#lib/structures/listeners": "./dist/lib/structures/listeners/index.js",
 		"#root/*": "./dist/*.js",
 		"#utils/*": "./dist/lib/utils/*.js",
-		"#utils/common": "./dist/lib/utils/common/index.js",
-		"#utils/functions": "./dist/lib/utils/functions/index.js",
-		"#utils/resolvers": "./dist/lib/utils/resolvers/index.js",
 		"#root/interactions": "./dist/interactions/index.js"
 	},
 	"scripts": {
-		"test": "vitest run",
 		"test:typescript": "tsc -b src",
 		"test:prettier": "prettier --check .",
 		"clean": "node scripts/clean.mjs",
