fix: remove single quote from env

--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,9 @@
-CLIENT_ID=''
-CLIENT_SECRET=''
-DISCORD_TOKEN=''
+CLIENT_ID=
+CLIENT_SECRET=
+DISCORD_TOKEN=
 
-PROMPT_WEBHOOK_URL=''
+PROMPT_WEBHOOK_URL=
 
-GPT_TOKEN=''
+GPT_TOKEN=
 
-PERSPECTIVE_API_KEY=""
+PERSPECTIVE_API_KEY=
