--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"#lib/structures/listeners": "./dist/lib/structures/listeners/index.js",
 		"#root/*": "./dist/*.js",
 		"#utils/*": "./dist/lib/utils/*.js",
-		"#root/interactions": "./dist/interactions/index.js"
+		"#root/interactions": "./dist/interactions/index.js",
+		"#lib/database": "./dist/lib/database/index.js"
 	},
 	"scripts": {
 		"test:typescript": "tsc -b src",
@@ -29,24 +30,25 @@
 	"license": "MIT",
 	"private": true,
 	"dependencies": {
-		"@sapphire/duration": "^1.0.0",
-		"@sapphire/ratelimits": "^2.4.5",
-		"@sapphire/timestamp": "^1.0.0",
-		"@sapphire/utilities": "^3.11.0",
-		"@skyra/env-utilities": "^1.1.0",
-		"discord-api-types": "^0.37.32",
-		"discord.js": "^14.7.1",
-		"globby": "^13.1.3",
-		"openai": "^3.2.1",
-		"perspective-api-client": "^3.1.0"
+		"@prisma/client": "^4.16.1",
+		"@sapphire/duration": "^1.1.0",
+		"@sapphire/ratelimits": "^2.4.6",
+		"@sapphire/timestamp": "^1.0.1",
+		"@sapphire/utilities": "^3.12.0",
+		"@skyra/env-utilities": "^1.2.1",
+		"discord-api-types": "^0.37.46",
+		"discord.js": "^14.11.0",
+		"globby": "^13.2.0",
+		"openai": "^3.3.0"
 	},
 	"devDependencies": {
-		"@types/node": "^18.11.18",
-		"eslint": "^8.33.0",
-		"eslint-config-neon": "^0.1.40",
-		"prettier": "^2.8.3",
-		"tslib": "^2.5.0",
-		"typescript": "^4.9.5"
+		"@types/node": "^20.3.2",
+		"eslint": "^8.43.0",
+		"eslint-config-neon": "^0.1.47",
+		"prettier": "^2.8.8",
+		"prisma": "^4.16.1",
+		"tslib": "^2.6.0",
+		"typescript": "^5.1.6"
 	},
 	"resolutions": {
 		"@discordjs/util": "0.1.1-dev.1675598630-405f940.0"
