feat: add comamnds listeners and fix commands

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,10 @@
 CLIENT_ID=
 CLIENT_SECRET=
 DISCORD_TOKEN=
+DISCORD_SERVERS=
 
 PROMPT_WEBHOOK_URL=
+WEBHOOK_ERROR_ID=
+WEBHOOK_ERROR_TOKEN=
 
 GPT_TOKEN=
