--- a/package.json
+++ b/package.json
@@ -37,15 +37,17 @@
 		"@sapphire/timestamp": "^1.0.5",
 		"@sapphire/utilities": "^3.18.2",
 		"@skyra/env-utilities": "^2.0.1",
-		"discord-api-types": "^0.38.18",
-		"discord.js": "^14.21.0",
+		"discord-api-types": "^0.38.24",
+		"discord.js": "^14.22.1",
 		"globby": "^14.1.0",
-		"openai": "^5.12.2"
+		"openai": "^5.20.2"
 	},
 	"devDependencies": {
-		"@types/node": "^24.2.1",
-		"eslint": "^9.33.0",
+		"@types/lodash.merge": "^4.6.9",
+		"@types/node": "^24.4.0",
+		"eslint": "^9.35.0",
 		"eslint-config-neon": "^0.2.7",
+		"lodash.merge": "^4.6.2",
 		"prettier": "^3.6.2",
 		"tslib": "^2.8.1",
 		"typescript": "^5.9.2"
