--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
 	"license": "MIT",
 	"private": true,
 	"dependencies": {
+		"@ai-sdk/openai": "^3.0.26",
+		"@ai-sdk/xai": "^3.0.50",
 		"@discordjs/voice": "^0.19.0",
 		"@sapphire/discord.js-utilities": "^7.3.3",
 		"@sapphire/duration": "^1.2.0",
@@ -39,6 +41,7 @@
 		"@sapphire/utilities": "^3.18.2",
 		"@skyra/env-utilities": "^2.0.1",
 		"@snazzah/davey": "^0.1.9",
+		"ai": "^6.0.78",
 		"discord-api-types": "^0.38.24",
 		"discord.js": "^14.22.1",
 		"globby": "^14.1.0",
